--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img src="../favicon.ico"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
@@ -23,9 +24,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#contact">Contact</a>
           </li>
-           
+
         </ul>
-        <form class="d-flex " style="padding-left: 40px;" >
+        <form class="d-flex " style="padding-left: 40px;">
           <button class="btn btn-primary" type="submit">Hire Me</button>
         </form>
       </div>
@@ -93,11 +94,11 @@
 </section>
 
 <!-- services section-->
-<section id="services" style="padding-top: 40px;">
+<section id="services" style="padding-top: 40px; padding-top: 50px; padding-bottom: 50px; background-color: antiquewhite;">
   <div class="container mt-5 mb-5">
     <h1 class="text-center">Services</h1>
     <div class="row">
-      <div class="col-lg-4 mt-4">
+      <div class="col-lg-4 mt-4" data-aos="fade-up"  data-aos-duration="1500">
         <div class="card servicesText">
           <div class="card-body">
             <i class="bis servicesIcon bi-clock"></i>
@@ -109,7 +110,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 mt-4">
+      <div class="col-lg-4 mt-4"  data-aos="fade-up"  data-aos-duration="1500">
         <div class="card servicesText">
           <div class="card-body">
             <i class='bis servicesIcon bi bi-stack'></i>
@@ -122,7 +123,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 mt-4">
+      <div class="col-lg-4 mt-4"  data-aos="fade-up"  data-aos-duration="1500">
         <div class="card servicesText">
           <div class="card-body">
             <i class='bir servicesIcon bi-check-circle'></i>
@@ -137,7 +138,7 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-4 mt-4">
+      <div class="col-lg-4 mt-4" data-aos="fade-up"  data-aos-duration="1500">
         <div class="card servicesText">
           <div class="card-body">
             <i class='bis servicesIcon bi-search'></i>
@@ -150,7 +151,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 mt-4">
+      <div class="col-lg-4 mt-4" data-aos="fade-up"  data-aos-duration="1500">
         <div class="card servicesText">
           <div class="card-body">
             <i class='bis servicesIcon bi-shield'></i>
@@ -163,7 +164,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 mt-4">
+      <div class="col-lg-4 mt-4" data-aos="fade-up"  data-aos-duration="1500">
         <div class="card servicesText">
           <div class="card-body">
             <i class='bis servicesIcon bi-wrench'></i>
@@ -180,18 +181,18 @@
 </section>
 
 <!-- portfolio section-->
-<section id="portfolio" style="padding-top: 80px;">
+<section id="portfolio" style="padding-top: 50px;padding-bottom: 50px;background-color: whitesmoke;">
   <div class="container">
     <h1 class="text-center">Portfolio</h1>
     <div class="row">
-      <div class="col-lg-4 mt-4">
+      <div class="col-lg-4 mt-4 bg-light">
         <div class="card portfolioContent">
           <img class="card-img-top" src="../assets/banner.png" alt="Card image" style="width:100%">
           <div class="card-body">
             <h4 class="card-title">Messaging Service</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="text-center">
-              <a href="#" class="btn btn-success">Link</a>
+              <a href="#" class="btn btn btn-outline-secondary">Link</a>
             </div>
           </div>
         </div>
@@ -204,7 +205,7 @@
             <h4 class="card-title">Twitter Clone</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="text-center">
-              <a href="#" class="btn btn-success">Link</a>
+              <a href="#" class="btn btn btn-outline-secondary">Link</a>
             </div>
           </div>
         </div>
@@ -217,7 +218,7 @@
             <h4 class="card-title">Blog App</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="text-center">
-              <a href="#" class="btn btn-success">Link</a>
+              <a href="#" class="btn btn btn-outline-secondary">Link</a>
             </div>
           </div>
         </div>
@@ -232,7 +233,7 @@
             <h4 class="card-title">Messaging Service</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="text-center">
-              <a href="#" class="btn btn-success">Link</a>
+              <a href="#" class="btn btn btn-outline-secondary">Link</a>
             </div>
           </div>
         </div>
@@ -245,7 +246,7 @@
             <h4 class="card-title">Twitter Clone</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="text-center">
-              <a href="#" class="btn btn-success">Link</a>
+              <a href="#" class="btn btn btn-outline-secondary">Link</a>
             </div>
           </div>
         </div>
@@ -258,7 +259,7 @@
             <h4 class="card-title">Blog App</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="text-center">
-              <a href="#" class="btn btn-success">Link</a>
+              <a href="#" class="btn btn btn-outline-secondary">Link</a>
             </div>
           </div>
         </div>
@@ -303,7 +304,7 @@
             <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
           </div>
         </form>
-        <button type="button" class="btn btn-success mt-3">Contact Me</button>
+        <button type="button" class="btn btn btn-outline-secondary mt-3">Contact Me</button>
 
       </div>
 
@@ -321,9 +322,7 @@
       <a href="https://www.twitter.com/vaibhav__404" target="_blank"><i class="bi bi-twitter"></i></a>
       <a href="https://www.linkedin.com/vaibhavpachpute/" target="_blank"><i class="bi bi-linkedin"></i></a>
       <a href="https://www.github.com/VaibhavPachpute21/" target="_blank"><i class="bi bi-github"></i></a>
-     
+
     </div>
   </div>
 </footer>
-
-
