--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,104 +1,110 @@
-<!-- NavBar -->
+<!-- Navbar starts -->
 <header class="header">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="../favicon.ico"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="navbar-nav  mb-2 mb-lg-0 ">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#services">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#contact">Contact</a>
-          </li>
+  <div class="header-inner">
+    <div class="container-fluid px-lg-5">
+      <nav class="navbar navbar-expand-lg my-navbar">
+        <a class="navbar-brand" routerLink=""><span class="logo">
+            <img src="" class="img-fluid" style="width:30px; margin:-3px 0px 0px 0px;">Vaibhav Pachpute</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"><i class="fas fa-bars" style="margin:5px 0px 0px 0px;"></i></span>
+        </button>
 
-        </ul>
-        <form class="d-flex " style="padding-left: 40px;">
-          <button class="btn btn-primary" type="submit">Hire Me</button>
-        </form>
-      </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto">
+            <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse.show">
+              <a class="nav-link" routerLink="">Home</a>
+            </li>
+            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+              <a class="nav-link" routerLink="images">Services</a>
+            </li>
+            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+              <a class="nav-link" routerLink="films">Projects</a>
+            </li>
+            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+              <a class="nav-link" routerLink="aboutUs">About</a>
+            </li>
+            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+              <a class="nav-link" routerLink="contactUs">Contact</a>
+            </li>
+          </ul>
+          <a href="https://github.com/VaibhavPachpute21/" target="_blank" ><button class="header-btn my-2 my-sm-0"
+            type="submit"><i class="bi bi-github"></i></button></a>&nbsp;
+          <a href="https://www.linkedin.com/in/vaibhavpachpute/" target="_blank" ><button class="header-btn my-2 my-sm-0"
+              type="submit"><i class="bi bi-linkedin"></i></button></a>&nbsp;
+
+          <a href="https://wa.me/919359979571" target="_blank"><button class="header-btn my-2 my-sm-0" type="submit"><i
+                class="bi bi-whatsapp"></i></button></a>
+        </div>
+      </nav>
     </div>
-  </nav>
+  </div>
 </header>
+<!-- Navbar ends -->
 
-<!-- main banner -->
-<section class="bgimage" id="home">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-        <h2 class="hero_title">Hi, it's me Vaibhav</h2>
-        <p class="hero_desc">I am a Developer from Thane</p>
-      </div>
+<!-- Intro slider starts here -->
+<div class="page-bg">
+<div class="animation-wrapper">
+  <div class="particle particle-1"></div>
+  <div class="particle particle-2"></div>
+  <div class="particle particle-3"></div>
+  <div class="particle particle-4"></div>
+</div>
+<div class="container text-center">
+  <div class="homeBanner">
+    <div class="box">
+      <img src="https://avatars.githubusercontent.com/u/77538181?s=400&u=6db7d90e9747d34d121bfc00b8925adf26f0a85d&v=4">
+    </div>
+    <h1>Hello, I'm Vaibhav</h1>
+    <h3>I'm Web-Developer Flutter Developer</h3>
+    <div class="container">
+      <button type="button" class="btn btn-primary">Hire Me</button>&nbsp;
+      <button type="button" class="btn btn-primary">Download CV <i class="bi bi-download"></i></button>
     </div>
   </div>
-</section>
+</div>
+</div>
+<!-- Intro slider ends here-->
 
-<!-- about section-->
-<section id="about" style="padding-top: 40px;">
-  <div class="container mt-5 mb-5">
-    <h1 class="text-center">About Me</h1>
-    <div class="row mt-4">
-      <div class="col-lg-4">
-        <img src="../assets/banner.png" class="imageAboutPage" alt="">
-      </div>
+<!-- My Details -->
+<!-- <div class="myDetails bg-light">
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+			<h3 class="text-left">
+				Personal Details
+			</h3>
+			<ul>
+				<li class="list-item">
+					Email:<a href="mailto:vpachpute22@gmail.com">vpachpute22@gmail.com</a>
+				</li>
+				<li class="list-item">
+					Nationality: Indian
+				</li>
+			</ul>
+		</div>
+		<div class="col-md-8">
+			<h3>
+			I'm a Developer
+			</h3>
+			<p>
+        Obviously I'm a Web Designer. Web Developer with over 3 years of experience. Experienced with all stages of the development cycle for dynamic web projects. The as opposed to using 'Content here, content here', making it look like readable English.
+    	</p>
+		</div>
+	</div>
+</div>
+</div> -->
+<!-- My Details ends -->
 
-      <div class="col-lg-8">
-        <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-          galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but
-          also the leap into electronic typesetting, remaining essentially unchanged
 
-        </p>
-        <div class="row mt-3">
-          <div class="col-md-6">
-            <ul>
-              <li>Name: David Parker</li>
-              <li>Age: 28</li>
-              <li>Occupation: Web Developer</li>
-
-            </ul>
-          </div>
-          <div class="col-md-6">
-            <ul>
-              <li>Name: David Parker</li>
-              <li>Age: 28</li>
-              <li>Occupation: Web Developer</li>
-
-            </ul>
-          </div>
-        </div>
-        <div class="row mt-3">
-          <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-            a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but
-            also the leap into electronic typesetting, remaining essentially unchanged.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-            galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but
-            also the leap into electronic typesetting, remaining essentially unchanged.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- services section-->
-<section id="services" style="padding-top: 40px; padding-top: 50px; padding-bottom: 50px; background-color: antiquewhite;">
-  <div class="container mt-5 mb-5">
+<!-- services section Start-->
+<section id="services" style="padding-top: 40px; padding-top: 50px; padding-bottom: 50px; background-color:whitesmoke">
+  <div class="container mt-5 mb-5 text-center">
     <h1 class="text-center">Services</h1>
+    <p>Obviously I'm a Web Designer. Experienced with all stages of the development cycle for dynamic web projects.</p>
     <div class="row">
-      <div class="col-lg-4 mt-4" data-aos="fade-up"  data-aos-duration="1500">
+      <div class="col-lg-4 mt-4">
         <div class="card servicesText">
           <div class="card-body">
             <i class="bis servicesIcon bi-clock"></i>
@@ -110,7 +116,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 mt-4"  data-aos="fade-up"  data-aos-duration="1500">
+      <div class="col-lg-4 mt-4">
         <div class="card servicesText">
           <div class="card-body">
             <i class='bis servicesIcon bi bi-stack'></i>
@@ -123,7 +129,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 mt-4"  data-aos="fade-up"  data-aos-duration="1500">
+      <div class="col-lg-4 mt-4" >
         <div class="card servicesText">
           <div class="card-body">
             <i class='bir servicesIcon bi-check-circle'></i>
@@ -138,7 +144,7 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-4 mt-4" data-aos="fade-up"  data-aos-duration="1500">
+      <div class="col-lg-4 mt-4" >
         <div class="card servicesText">
           <div class="card-body">
             <i class='bis servicesIcon bi-search'></i>
@@ -151,11 +157,11 @@
         </div>
       </div>
 
-      <div class="col-lg-4 mt-4" data-aos="fade-up"  data-aos-duration="1500">
+      <div class="col-lg-4 mt-4">
         <div class="card servicesText">
           <div class="card-body">
             <i class='bis servicesIcon bi-shield'></i>
-            <h4 class="card-title mt-3">DevOps</h4>
+            <h4 class="card-title mt-3">App Development</h4>
             <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
               card's content.
               Some quick example text to build on the card title and make up the bulk of the card's content.
@@ -164,7 +170,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 mt-4" data-aos="fade-up"  data-aos-duration="1500">
+      <div class="col-lg-4 mt-4" >
         <div class="card servicesText">
           <div class="card-body">
             <i class='bis servicesIcon bi-wrench'></i>
@@ -179,8 +185,9 @@
     </div>
   </div>
 </section>
+<!-- Service section Ends -->
 
-<!-- portfolio section-->
+<!-- portfolio section start-->
 <section id="portfolio" style="padding-top: 50px;padding-bottom: 50px;background-color: whitesmoke;">
   <div class="container">
     <h1 class="text-center">Portfolio</h1>
@@ -267,8 +274,9 @@
     </div>
   </div>
 </section>
+<!-- Portfolio section ends -->
 
-<!-- contact section-->
+<!-- contact section start-->
 <section id="contact" style="padding-top: 60px;">
   <div class="container mt-3 contactContent">
     <h1 class="text-center">Contact Me</h1>
@@ -311,7 +319,7 @@
     </div>
   </div>
 </section>
-
+<!-- Contact section ends -->
 
 <!-- footer section-->
 <footer id="footer">
