--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,10 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 body{
-    min-height: 200vh;
-
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  background-color: aliceblue;
 }
 
 /* width */
