--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -111,7 +111,6 @@ font-weight: 500;
   }
 
   .homeBanner img{
-      z-index: 999000;
       border-radius: 1000px;
   }
 
@@ -281,4 +280,24 @@ font-weight: 500;
     padding-bottom: 4rem;
 }
 
+.text{
+  color:white;
+  font-size: 300px;
+}
+.blink {
+  border-right-style: solid;
+  animation: 1s blink infinity;
+}
+@keyframes blink {
+  to {
+    opacity: 0;
+  }
+}
 
+
+.word {
+  margin: auto;
+  color: white;
+  font: 700 normal 4em/1.5 "Montserrat", sans-serif;
+  /* text-shadow: 1px 2px #288ce3, 2px 4px #288ce3, 3px 6px #288ce3, 4px 8px #288ce3, 5px 10px #288ce3, 6px 12px #288ce3, 7px 14px #288ce3, 8px 16px #288ce3, 9px 18px #288ce3, 10px 20px #288ce3; */
+}
