--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,8 +56,12 @@
     <div class="box">
       <img src="https://avatars.githubusercontent.com/u/77538181?s=400&u=6db7d90e9747d34d121bfc00b8925adf26f0a85d&v=4">
     </div>
-    <h1>Hello, I'm Vaibhav</h1>
-    <h3>I'm Web-Developer Flutter Developer</h3>
+    <div class="word"></div>
+    <!-- <div>
+      <h1><span #textElement class="text" style="color: white;"></span>
+        <span #blinkElement class="text blink" style="color: white;"></span> </h1>
+      
+    </div> -->
     <div class="container">
       <button type="button" class="btn btn-primary">Hire Me</button>&nbsp;
       <button type="button" class="btn btn-primary">Download CV <i class="bi bi-download"></i></button>
@@ -97,7 +101,7 @@
 </div> -->
 <!-- My Details ends -->
 
-
+<h1>Hello, I'm </h1><span class="auto-input"></span>
 <!-- services section Start-->
 <section id="services" style="padding-top: 40px; padding-top: 50px; padding-bottom: 50px; background-color:whitesmoke">
   <div class="container mt-5 mb-5 text-center">
