--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,600&display=swap');
+
+@media only screen and (min-width:1200px){
+	.nav-item > .nav-link{padding: 5px 20px !important;
+		display: block !important;}
+    .homeBanner img{
+        height: 350px;
+    }
+}
+
 
 @media only screen and (min-width:1200px){
 	.nav-item > .nav-link{padding: 5px 20px !important;
@@ -232,6 +242,16 @@ font-weight: 500;
 
 
 /* services section css */
+
+#services h1{
+  font-family: 'Libre Bodoni', serif;
+}
+
+#services p{
+  font-family: 'Roboto Mono', monospace;
+  text-align: justify;
+}
+
 .servicesText.card {
    
     cursor: pointer;
@@ -296,8 +316,10 @@ font-weight: 500;
 
 
 .word {
-  margin: auto;
-  color: white;
-  font: 700 normal 4em/1.5 "Montserrat", sans-serif;
-  /* text-shadow: 1px 2px #288ce3, 2px 4px #288ce3, 3px 6px #288ce3, 4px 8px #288ce3, 5px 10px #288ce3, 6px 12px #288ce3, 7px 14px #288ce3, 8px 16px #288ce3, 9px 18px #288ce3, 10px 20px #288ce3; */
+  margin-top: 5px;
+  padding-bottom: 5px;
+  color: white; 
+  font-size: 30px;
+  height: 90px;
+  font-family: 'Roboto Mono', monospace;
 }
