--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
     <div class="container-fluid px-lg-5">
       <nav class="navbar navbar-expand-lg my-navbar">
         <a class="navbar-brand" routerLink=""><span class="logo">
-            <img src="" class="img-fluid" style="width:30px; margin:-3px 0px 0px 0px;">Vaibhav Pachpute</span>
+            <img src="../favicon.ico" class="img-fluid" style="width:30px; margin:-3px 0px 0px 0px;">Vaibhav
+            Pachpute</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,13 +15,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto">
             <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse.show">
-              <a class="nav-link" routerLink="">Home</a>
+              <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-              <a class="nav-link" routerLink="images">Services</a>
+              <a class="nav-link" href="#services">Services</a>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-              <a class="nav-link" routerLink="films">Projects</a>
+              <a class="nav-link" href="#portfolio">Projects</a>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
               <a class="nav-link" routerLink="aboutUs">About</a>
@@ -29,9 +30,9 @@
               <a class="nav-link" routerLink="contactUs">Contact</a>
             </li>
           </ul>
-          <a href="https://github.com/VaibhavPachpute21/" target="_blank" ><button class="header-btn my-2 my-sm-0"
-            type="submit"><i class="bi bi-github"></i></button></a>&nbsp;
-          <a href="https://www.linkedin.com/in/vaibhavpachpute/" target="_blank" ><button class="header-btn my-2 my-sm-0"
+          <a href="https://github.com/VaibhavPachpute21/" target="_blank"><button class="header-btn my-2 my-sm-0"
+              type="submit"><i class="bi bi-github"></i></button></a>&nbsp;
+          <a href="https://www.linkedin.com/in/vaibhavpachpute/" target="_blank"><button class="header-btn my-2 my-sm-0"
               type="submit"><i class="bi bi-linkedin"></i></button></a>&nbsp;
 
           <a href="https://wa.me/919359979571" target="_blank"><button class="header-btn my-2 my-sm-0" type="submit"><i
@@ -44,30 +45,28 @@
 <!-- Navbar ends -->
 
 <!-- Intro slider starts here -->
-<div class="page-bg">
-<div class="animation-wrapper">
-  <div class="particle particle-1"></div>
-  <div class="particle particle-2"></div>
-  <div class="particle particle-3"></div>
-  <div class="particle particle-4"></div>
-</div>
-<div class="container text-center">
-  <div class="homeBanner">
-    <div class="box">
-      <img src="https://avatars.githubusercontent.com/u/77538181?s=400&u=6db7d90e9747d34d121bfc00b8925adf26f0a85d&v=4">
-    </div>
-    <div class="word"></div>
-    <!-- <div>
-      <h1><span #textElement class="text" style="color: white;"></span>
-        <span #blinkElement class="text blink" style="color: white;"></span> </h1>
-      
-    </div> -->
-    <div class="container">
-      <button type="button" class="btn btn-primary">Hire Me</button>&nbsp;
-      <button type="button" class="btn btn-primary">Download CV <i class="bi bi-download"></i></button>
+<div class="page-bg" id="home">
+  <div class="animation-wrapper">
+    <div class="particle particle-1"></div>
+    <div class="particle particle-2"></div>
+    <div class="particle particle-3"></div>
+    <div class="particle particle-4"></div>
+  </div>
+  <div class="container text-center">
+    <div class="homeBanner">
+      <div class="box">
+        <img
+          src="https://avatars.githubusercontent.com/u/77538181?s=400&u=6db7d90e9747d34d121bfc00b8925adf26f0a85d&v=4">
+      </div>
+      <span>
+        <div class="word"></div>
+      </span>
+      <div class="container">
+        <button type="button" class="btn btn-primary">Hire Me</button>&nbsp;
+        <button type="button" class="btn btn-primary">Download CV <i class="bi bi-download"></i></button>
+      </div>
     </div>
   </div>
-</div>
 </div>
 <!-- Intro slider ends here-->
 
@@ -102,63 +101,36 @@
 <!-- My Details ends -->
 
 <!-- services section Start-->
-<section id="services" style="padding-top: 40px; padding-top: 50px; padding-bottom: 50px; background-color:whitesmoke">
-  <div class="container mt-5 mb-5 text-center">
+<section id="services" style="padding-top: 50px; padding-bottom: 50px; background-color:whitesmoke">
+  <div class="container text-center">
     <h1 class="text-center">Services</h1>
-    <p>Obviously I'm a Web Designer. Experienced with all stages of the development cycle for dynamic web projects.</p>
+    <p style="text-align: center;">Obviously I'm a Web Designer and App Developer. Experienced with all stages of the
+      development cycle for dynamic web projects.</p>
     <div class="row">
       <div class="col-lg-4 mt-4">
         <div class="card servicesText">
           <div class="card-body">
             <i class="bis servicesIcon bi-clock"></i>
             <h4 class="card-title mt-3">Website Development</h4>
-            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
-              card's content.
-              Some quick example text to build on the card title and make up the bulk of the card's content.
+            <p class="card-text mt-3">
+              Web development is the work involved in developing a website for the Internet or an intranet. Web
+              development can range from developing a simple single static page of plain text to complex web
+              applications.
             </p>
           </div>
         </div>
       </div>
-      <div class="col-lg-4 mt-4">
+
+      <!-- <div class="col-lg-4 mt-4">
         <div class="card servicesText">
           <div class="card-body">
             <i class='bis servicesIcon bi bi-stack'></i>
             <h4 class="card-title mt-3">Website Design</h4>
-            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
-              card's content.
-              Some quick example text to build on the card title and make up the bulk of the card's content.
+            <p class="card-text mt-3">Successful online projects start with good design. It establishes a solid foundation for future development and allows for long term growth
             </p>
           </div>
         </div>
-      </div>
-
-      <div class="col-lg-4 mt-4" >
-        <div class="card servicesText">
-          <div class="card-body">
-            <i class='bir servicesIcon bi-check-circle'></i>
-            <h4 class="card-title mt-3">Website Deployment</h4>
-            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
-              card's content.
-              Some quick example text to build on the card title and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-4 mt-4" >
-        <div class="card servicesText">
-          <div class="card-body">
-            <i class='bis servicesIcon bi-search'></i>
-            <h4 class="card-title mt-3">SEO</h4>
-            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
-              card's content.
-              Some quick example text to build on the card title and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
+      </div> -->
 
       <div class="col-lg-4 mt-4">
         <div class="card servicesText">
@@ -173,7 +145,35 @@
         </div>
       </div>
 
-      <div class="col-lg-4 mt-4" >
+      <div class="col-lg-4 mt-4">
+        <div class="card servicesText">
+          <div class="card-body">
+            <i class='bis servicesIcon bi-search'></i>
+            <h4 class="card-title mt-3">SEO</h4>
+            <p class="card-text mt-3">
+              i can setup your project to use basic SEO principles which will push your project to the first page on
+              search engines and save you ads money
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="col-lg-4 mt-4" >
+        <div class="card servicesText">
+          <div class="card-body">
+            <i class='bir servicesIcon bi-check-circle'></i>
+            <h4 class="card-title mt-3">Website Deployment</h4>
+            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+              card's content.
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div> -->
+    </div>
+
+    <!-- <div class="row">
+      <div class="col-lg-4 mt-4">
         <div class="card servicesText">
           <div class="card-body">
             <i class='bis servicesIcon bi-wrench'></i>
@@ -185,19 +185,20 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
+
   </div>
 </section>
 <!-- Service section Ends -->
 
 <!-- portfolio section start-->
 <section id="portfolio" style="padding-top: 50px;padding-bottom: 50px;background-color: whitesmoke;">
-  <div class="container">
-    <h1 class="text-center">Portfolio</h1>
+  <div class="container text-center">
+    <h1 class="text-center">Projects</h1>
     <div class="row">
       <div class="col-lg-4 mt-4 bg-light">
         <div class="card portfolioContent">
-          <img class="card-img-top" src="../assets/banner.png" alt="Card image" style="width:100%">
+          <i class="bi bi-window-dock servicesIcon"></i>
           <div class="card-body">
             <h4 class="card-title">Messaging Service</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -210,7 +211,7 @@
 
       <div class="col-lg-4 mt-4">
         <div class="card portfolioContent">
-          <img class="card-img-top" src="../assets/banner.png" alt="Card image" style="width:100%">
+          <i class="bi bi-window-dock servicesIcon"></i>
           <div class="card-body">
             <h4 class="card-title">Twitter Clone</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -223,7 +224,7 @@
 
       <div class="col-lg-4 mt-4">
         <div class="card portfolioContent">
-          <img class="card-img-top" src="../assets/banner.png" alt="Card image" style="width:100%">
+          <i class="bi bi-window-dock servicesIcon"></i>
           <div class="card-body">
             <h4 class="card-title">Blog App</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -238,7 +239,7 @@
     <div class="row">
       <div class="col-lg-4 mt-4">
         <div class="card portfolioContent">
-          <img class="card-img-top" src="../assets/banner.png" alt="Card image" style="width:100%">
+          <i class="bi bi-window-dock servicesIcon"></i>
           <div class="card-body">
             <h4 class="card-title">Messaging Service</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -251,7 +252,7 @@
 
       <div class="col-lg-4 mt-4">
         <div class="card portfolioContent">
-          <img class="card-img-top" src="../assets/banner.png" alt="Card image" style="width:100%">
+          <i class="bi bi-window-dock servicesIcon"></i>
           <div class="card-body">
             <h4 class="card-title">Twitter Clone</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -264,7 +265,7 @@
 
       <div class="col-lg-4 mt-4">
         <div class="card portfolioContent">
-          <img class="card-img-top" src="../assets/banner.png" alt="Card image" style="width:100%">
+          <i class="bi bi-window-dock servicesIcon"></i>
           <div class="card-body">
             <h4 class="card-title">Blog App</h4>
             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
