--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,33 +71,30 @@
 <!-- Intro slider ends here-->
 
 <!-- My Details -->
-<!-- <div class="myDetails bg-light">
-<div class="container">
-	<div class="row">
-		<div class="col-md-4">
-			<h3 class="text-left">
-				Personal Details
-			</h3>
-			<ul>
-				<li class="list-item">
-					Email:<a href="mailto:vpachpute22@gmail.com">vpachpute22@gmail.com</a>
-				</li>
-				<li class="list-item">
-					Nationality: Indian
-				</li>
-			</ul>
-		</div>
-		<div class="col-md-8">
-			<h3>
-			I'm a Developer
-			</h3>
-			<p>
-        Obviously I'm a Web Designer. Web Developer with over 3 years of experience. Experienced with all stages of the development cycle for dynamic web projects. The as opposed to using 'Content here, content here', making it look like readable English.
-    	</p>
-		</div>
-	</div>
+<div class="myDetails bg-light">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>
+         Vaibhav Pachpute
+        </h3>
+        <p>
+          I'm Vaibhav Pachpute. I'm engineering student at Universal Collage of Engineering.
+          I'm a Web Designer and also App Developer.Ihave knowledge of website designing and deployment. Web Developer with over 3 years of experience. Experienced with all stages of
+          the development cycle for dynamic web projects. The as opposed to using 'Content here, content here', making
+          it look like readable English.
+        </p>
+      </div>
+      <div class="col-md-8">
+        <h3>
+          Skills
+        </h3>
+
+      </div>
+    </div>
+  </div>
 </div>
-</div> -->
+
 <!-- My Details ends -->
 
 <!-- services section Start-->
@@ -107,171 +104,35 @@
     <p style="text-align: center;">Obviously I'm a Web Designer and App Developer. Experienced with all stages of the
       development cycle for dynamic web projects.</p>
     <div class="row">
-      <div class="col-lg-4 mt-4">
+      <div class="col-lg-4 mt-4" data-aos="fade-up" *ngFor="let service of services">
         <div class="card servicesText">
           <div class="card-body">
-            <i class="bis servicesIcon bi-clock"></i>
-            <h4 class="card-title mt-3">Website Development</h4>
+            <i class="bis servicesIcon {{service.icon}}"></i>
+            <h4 class="card-title mt-3">{{service.title}}</h4>
             <p class="card-text mt-3">
-              Web development is the work involved in developing a website for the Internet or an intranet. Web
-              development can range from developing a simple single static page of plain text to complex web
-              applications.
+              {{service.description}}
             </p>
           </div>
         </div>
       </div>
 
-      <!-- <div class="col-lg-4 mt-4">
-        <div class="card servicesText">
-          <div class="card-body">
-            <i class='bis servicesIcon bi bi-stack'></i>
-            <h4 class="card-title mt-3">Website Design</h4>
-            <p class="card-text mt-3">Successful online projects start with good design. It establishes a solid foundation for future development and allows for long term growth
-            </p>
-          </div>
-        </div>
-      </div> -->
-
-      <div class="col-lg-4 mt-4">
-        <div class="card servicesText">
-          <div class="card-body">
-            <i class='bis servicesIcon bi-shield'></i>
-            <h4 class="card-title mt-3">App Development</h4>
-            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
-              card's content.
-              Some quick example text to build on the card title and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 mt-4">
-        <div class="card servicesText">
-          <div class="card-body">
-            <i class='bis servicesIcon bi-search'></i>
-            <h4 class="card-title mt-3">SEO</h4>
-            <p class="card-text mt-3">
-              i can setup your project to use basic SEO principles which will push your project to the first page on
-              search engines and save you ads money
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!-- <div class="col-lg-4 mt-4" >
-        <div class="card servicesText">
-          <div class="card-body">
-            <i class='bir servicesIcon bi-check-circle'></i>
-            <h4 class="card-title mt-3">Website Deployment</h4>
-            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
-              card's content.
-              Some quick example text to build on the card title and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div> -->
     </div>
-
-    <!-- <div class="row">
-      <div class="col-lg-4 mt-4">
-        <div class="card servicesText">
-          <div class="card-body">
-            <i class='bis servicesIcon bi-wrench'></i>
-            <h4 class="card-title mt-3">QA</h4>
-            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
-              card's content.
-              Some quick example text to build on the card title and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
   </div>
 </section>
 <!-- Service section Ends -->
-
 <!-- portfolio section start-->
-<section id="portfolio" style="padding-top: 50px;padding-bottom: 50px;background-color: whitesmoke;">
+<section id="portfolio" style="padding-top:50px; padding-bottom: 50px; background-color: rgb(221, 233, 232);">
   <div class="container text-center">
     <h1 class="text-center">Projects</h1>
     <div class="row">
-      <div class="col-lg-4 mt-4 bg-light">
-        <div class="card portfolioContent">
-          <i class="bi bi-window-dock servicesIcon"></i>
-          <div class="card-body">
-            <h4 class="card-title">Messaging Service</h4>
-            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <div class="text-center">
-              <a href="#" class="btn btn btn-outline-secondary">Link</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 mt-4">
-        <div class="card portfolioContent">
-          <i class="bi bi-window-dock servicesIcon"></i>
-          <div class="card-body">
-            <h4 class="card-title">Twitter Clone</h4>
-            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <div class="text-center">
-              <a href="#" class="btn btn btn-outline-secondary">Link</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 mt-4">
-        <div class="card portfolioContent">
-          <i class="bi bi-window-dock servicesIcon"></i>
-          <div class="card-body">
-            <h4 class="card-title">Blog App</h4>
-            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <div class="text-center">
-              <a href="#" class="btn btn btn-outline-secondary">Link</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br>
-    <div class="row">
-      <div class="col-lg-4 mt-4">
-        <div class="card portfolioContent">
-          <i class="bi bi-window-dock servicesIcon"></i>
-          <div class="card-body">
-            <h4 class="card-title">Messaging Service</h4>
-            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <div class="text-center">
-              <a href="#" class="btn btn btn-outline-secondary">Link</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 mt-4">
-        <div class="card portfolioContent">
-          <i class="bi bi-window-dock servicesIcon"></i>
-          <div class="card-body">
-            <h4 class="card-title">Twitter Clone</h4>
-            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <div class="text-center">
-              <a href="#" class="btn btn btn-outline-secondary">Link</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 mt-4">
-        <div class="card portfolioContent">
-          <i class="bi bi-window-dock servicesIcon"></i>
-          <div class="card-body">
-            <h4 class="card-title">Blog App</h4>
-            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <div class="text-center">
-              <a href="#" class="btn btn btn-outline-secondary">Link</a>
-            </div>
+      <div class="col-lg-4 mt-4" data-aos="fade-up" *ngFor="let project of projects">
+        <div class="card card-body">
+          <i class="bi bi-folder servicesIcon"></i>
+          <h4 class="card-title">{{project.title}}</h4>
+          <p class="card-text" style="text-align: justify;">{{project.description}}</p>
+          <div class="text-center">
+            <a href="{{project.link}}" target="_blank" class="btn btn btn-outline-secondary">Link</a>
           </div>
         </div>
       </div>
