--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,13 +18,13 @@
               <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
               <a class="nav-link" href="#services">Services</a>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
               <a class="nav-link" href="#portfolio">Projects</a>
-            </li>
-            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-              <a class="nav-link" routerLink="aboutUs">About</a>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
               <a class="nav-link" routerLink="contactUs">Contact</a>
@@ -71,18 +71,20 @@
 <!-- Intro slider ends here-->
 
 <!-- My Details -->
+<section id="about" style="padding-top: 50px;">
 <div class="myDetails bg-light">
   <div class="container-fluid">
+    <h1 class="text-center">About me</h1>
     <div class="row">
       <div class="col-md-4">
         <h3>
-         Vaibhav Pachpute
+          Vaibhav Pachpute
         </h3>
-        <p>
+        <p style="text-align: justify;">
           I'm Vaibhav Pachpute. I'm engineering student at Universal Collage of Engineering.
-          I'm a Web Designer and also App Developer.Ihave knowledge of website designing and deployment. Web Developer with over 3 years of experience. Experienced with all stages of
-          the development cycle for dynamic web projects. The as opposed to using 'Content here, content here', making
-          it look like readable English.
+          I'm a Web Designer and also App Developer.Ihave knowledge of website designing and deployment.I have knowledge
+          of html, css ,javasscript and also web frameworks like Angular,React.
+          I have knowledge of Flutter. I can create fully functional app and can stick it with backend using flutter.
         </p>
       </div>
       <div class="col-md-8">
@@ -90,11 +92,31 @@
           Skills
         </h3>
 
+        <p>HTML CSS</p>
+        <div class="scontainer">
+          <div class="skills html">90%</div>
+        </div>
+
+        <p>Javascript</p>
+        <div class="scontainer">
+          <div class="skills javasscript">90%</div>
+        </div>
+
+        <p>Angular</p>
+        <div class="scontainer">
+          <div class="skills angular">60%</div>
+        </div>
+
+        <p>Flutter</p>
+        <div class="scontainer">
+          <div class="skills flutter">80%</div>
+        </div>
+
       </div>
     </div>
   </div>
 </div>
-
+</section>
 <!-- My Details ends -->
 
 <!-- services section Start-->
