started with new idea

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto">
             <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse.show">
-              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" routerLink="newHome">Home</a>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
               <a class="nav-link" href="#about">About</a>
@@ -43,181 +43,4 @@
   </div>
 </header>
 <!-- Navbar ends -->
-
-<!-- Intro slider starts here -->
-<div class="page-bg" id="home">
-  <div class="animation-wrapper">
-    <div class="particle particle-1"></div>
-    <div class="particle particle-2"></div>
-    <div class="particle particle-3"></div>
-    <div class="particle particle-4"></div>
-  </div>
-  <div class="container text-center">
-    <div class="homeBanner">
-      <div class="box">
-        <img
-          src="https://avatars.githubusercontent.com/u/77538181?s=400&u=6db7d90e9747d34d121bfc00b8925adf26f0a85d&v=4">
-      </div>
-      <span>
-        <div class="word"></div>
-      </span>
-      <div class="container">
-        <button type="button" class="btn btn-primary">Hire Me</button>&nbsp;
-        <button type="button" class="btn btn-primary">Download CV <i class="bi bi-download"></i></button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Intro slider ends here-->
-
-<!-- My Details -->
-<section id="about" style="padding-top: 50px;">
-<div class="myDetails bg-light">
-  <div class="container-fluid">
-    <h1 class="text-center">About me</h1>
-    <div class="row">
-      <div class="col-md-4">
-        <h3>
-          Vaibhav Pachpute
-        </h3>
-        <p style="text-align: justify;">
-          I'm Vaibhav Pachpute. I'm engineering student at Universal Collage of Engineering.
-          I'm a Web Designer and also App Developer.Ihave knowledge of website designing and deployment.I have knowledge
-          of html, css ,javasscript and also web frameworks like Angular,React.
-          I have knowledge of Flutter. I can create fully functional app and can stick it with backend using flutter.
-        </p>
-      </div>
-      <div class="col-md-8">
-        <h3>
-          Skills
-        </h3>
-
-        <p>HTML CSS</p>
-        <div class="scontainer">
-          <div class="skills html">90%</div>
-        </div>
-
-        <p>Javascript</p>
-        <div class="scontainer">
-          <div class="skills javasscript">90%</div>
-        </div>
-
-        <p>Angular</p>
-        <div class="scontainer">
-          <div class="skills angular">60%</div>
-        </div>
-
-        <p>Flutter</p>
-        <div class="scontainer">
-          <div class="skills flutter">80%</div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-</div>
-</section>
-<!-- My Details ends -->
-
-<!-- services section Start-->
-<section id="services" style="padding-top: 50px; padding-bottom: 50px; background-color:whitesmoke">
-  <div class="container text-center">
-    <h1 class="text-center">Services</h1>
-    <p style="text-align: center;">Obviously I'm a Web Designer and App Developer. Experienced with all stages of the
-      development cycle for dynamic web projects.</p>
-    <div class="row">
-      <div class="col-lg-4 mt-4" data-aos="fade-up" *ngFor="let service of services">
-        <div class="card servicesText">
-          <div class="card-body">
-            <i class="bis servicesIcon {{service.icon}}"></i>
-            <h4 class="card-title mt-3">{{service.title}}</h4>
-            <p class="card-text mt-3">
-              {{service.description}}
-            </p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-</section>
-<!-- Service section Ends -->
-<!-- portfolio section start-->
-<section id="portfolio" style="padding-top:50px; padding-bottom: 50px; background-color: rgb(221, 233, 232);">
-  <div class="container text-center">
-    <h1 class="text-center">Projects</h1>
-    <div class="row">
-      <div class="col-lg-4 mt-4" data-aos="fade-up" *ngFor="let project of projects">
-        <div class="card card-body">
-          <i class="bi bi-folder servicesIcon"></i>
-          <h4 class="card-title">{{project.title}}</h4>
-          <p class="card-text" style="text-align: justify;">{{project.description}}</p>
-          <div class="text-center">
-            <a href="{{project.link}}" target="_blank" class="btn btn btn-outline-secondary">Link</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Portfolio section ends -->
-
-<!-- contact section start-->
-<section id="contact" style="padding-top: 60px;">
-  <div class="container mt-3 contactContent">
-    <h1 class="text-center">Contact Me</h1>
-    <div class="row mt-4">
-      <div class="col-lg-6">
-        <!-- to edit google map goto https://www.embed-map.com type your location, generate html code and copy the html  -->
-        <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;">
-          <div id="googlemaps-canvas" style="height:100%; width:100%;max-width:100%;"><iframe
-              style="height:100%;width:100%;border:0;" frameborder="0"
-              src="https://www.google.com/maps/embed/v1/place?q=Ganesh+Nagar,+Nhavi+Pada,+Bhiwandi,+Maharashtra+421302&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
-          </div><a class="googlemap-code" href="https://www.embed-map.com"
-            id="authorizemaps-data">https://www.embed-map.com</a>
-          <style>
-            #googlemaps-canvas img.text-marker {
-              max-width: none !important;
-              background: none !important;
-            }
-
-            img {
-              max-width: none
-            }
-          </style>
-        </div>
-      </div>
-
-      <div class="col-lg-6">
-        <!-- form fields -->
-        <form>
-          <input type="text" class="form-control form-control-lg" placeholder="Name">
-          <input type="email" class="form-control mt-3" placeholder="Email">
-          <input type="text" class="form-control mt-3" placeholder="Subject">
-          <div class="mb-3 mt-3">
-            <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
-          </div>
-        </form>
-        <button type="button" class="btn btn btn-outline-secondary mt-3">Contact Me</button>
-
-      </div>
-
-    </div>
-  </div>
-</section>
-<!-- Contact section ends -->
-
-<!-- footer section-->
-<footer id="footer">
-  <div class="container-fluid">
-    <!-- social media icons -->
-    <div class="social-icons mt-4">
-      <a href="https://www.instagram.com/vaibhav_pachpute_" target="_blank"><i class="bi bi-instagram"></i></a>
-      <a href="https://www.twitter.com/vaibhav__404" target="_blank"><i class="bi bi-twitter"></i></a>
-      <a href="https://www.linkedin.com/vaibhavpachpute/" target="_blank"><i class="bi bi-linkedin"></i></a>
-      <a href="https://www.github.com/VaibhavPachpute21/" target="_blank"><i class="bi bi-github"></i></a>
-
-    </div>
-  </div>
-</footer>
+<router-outlet></router-outlet>
