--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,28 +1,93 @@
-<section id="home">
+<section id="home" class="home">
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 order-sm-first">
                 <img alt="Bootstrap Image Preview" src="../../assets/hero.jpg" class="img-thumbnail" />
             </div>
             <div class="col-md-8">
+                <h1>Hi I'm <strong style="color: #ff6e40;">Vaibhav Pachpute.</strong></h1>
                 <h3 class="text-left">
-                    h3. Lorem ipsum dolor sit amet.
+                    <span>I'm a </span>
+                    <span class="word" style="color: #ff6e40;"></span>
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
-                </p> 
-                <button type="button" class="btn btn-md btn-outline-info">
-                    Button
+                    I'm a <strong> Web-Developer</strong>, I love to create beautiful and functional websites. I can
+                    also
+                    build native apps with flutter!
+                </p>
+                <button type="button" class="btn btn-md btn-outline-danger">
+                    Download CV <i class="bi bi-download"></i>
                 </button>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+<section id="about" class="about">
+    <h1 class="text-center">ABOUT <span style="color: #ff6e40;">ME</span> </h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <h3 style="text-align: center;">
+                    Who am I?
+                </h3>
+                <p class="lead">
+                    I'm <span style="color: #ff6e40; font-weight: bold;">Vaibhav Pachpute</span>. I'm engineering
+                    student at Universal
+                    Collage of Engineering. I'm a <span style="color: #ff6e40; font-style: italic;">Web
+                        Developer</span> and also <span style="color: #ff6e40; font-style: italic;">App
+                        Developer</span>.I have knowledge of website designing and deployment.I have knowledge
+                    of html, css ,javasscript and also web frameworks like Angular,React. I have knowledge of Flutter. I
+                    can create fully functional app and can stick it with backend using flutter.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <h3 style="text-align: center;">My Skills</h3>
+
+                <div class="mt-3">HTML
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 90%; background-color: #ff6e40;"
+                            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><strong>90%</strong></div>
+                    </div>
+                </div>
+
+                <div class="mt-3">CSS
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%; background-color: #ff6e40;"
+                            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><strong>80%</strong></div>
+                    </div>
+                </div>
+
+                <div class="mt-3">Javasscript
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 75%; background-color: #ff6e40;"
+                            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><strong>75%</strong></div>
+                    </div>
+                </div>
+
+                <div class="mt-3">Flutter
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 70%; background-color: #ff6e40;"
+                            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><strong>70%</strong></div>
+                    </div>
+                </div>
+
+                <div class="mt-3">Angular
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 70%; background-color: #ff6e40;"
+                            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><strong>70%</strong></div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
 </section>
 
 
-<section id="about">
-    <h1>About</h1>
-</section>
+
 <section id="services">
     <h1>Services</h1>
 </section>
