--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,19 +15,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto">
             <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse.show">
-              <a class="nav-link" routerLink="newHome">Home</a>
+              <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
               <a class="nav-link" href="#about">About</a>
             </li>
-            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <!-- <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
               <a class="nav-link" href="#services">Services</a>
+            </li> -->
+            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+              <a class="nav-link" href="#project">Projects</a>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-              <a class="nav-link" href="#portfolio">Projects</a>
-            </li>
-            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-              <a class="nav-link" routerLink="contactUs">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
           <a href="https://github.com/VaibhavPachpute21/" target="_blank"><button class="header-btn my-2 my-sm-0"
