temporary mail method added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,8 @@
                 <img alt="Bootstrap Image Preview" src="../../assets/hero.jpg" class="img-thumbnail" />
             </div>
             <div class="col-md-8">
-                <h1>Hi I'm <strong style="color: #ff6e40; font-family: 'Libre Bodoni', serif;">Vaibhav Pachpute.</strong></h1>
+                <h1>Hi I'm <strong style="color: #ff6e40; font-family: 'Libre Bodoni', serif;">Vaibhav
+                        Pachpute.</strong></h1>
                 <h3 class="text-left">
                     <span>I'm a </span>
                     <span class="word" style="color: #ff6e40;"></span>
@@ -15,7 +16,8 @@
                     also
                     build native apps with flutter!
                 </p>
-                <button type="button" onclick="window.location.href='.../../assets/VaibahvPachpute.pdf'" class="btn btn-md btn-outline-danger">
+                <button type="button" onclick="window.location.href='.../../assets/VaibahvPachpute.pdf'"
+                    class="btn btn-md btn-outline-danger">
                     Download CV <i class="bi bi-download"></i>
                 </button>
             </div>
@@ -134,15 +136,20 @@
                 <span><i class="bi bi-envelope-fill"></i> Email: vpachpute22@gmail.com</span><br>
                 <span><i class="bi bi-telephone"></i> +91 9359979571</span><br>
                 <div>
-                    <a href="https://github.com/VaibhavPachpute21" target="_blank"><i class="bi bi-github " style="color:  #000000;" aria-label="GitHub"></i></a>
-                    <a href="https://www.linkedin.com/in/vaibhavpachpute/" target="_blank"><i class="bi bi-linkedin" style="color: #007bb6;" aria-label="Linkedin"></i></a>
-                    <a href="https://twitter.com/vaibhav__404" target="_blank"><i class="bi bi-twitter" style="color: #007bb6;" aria-label="Twitter"></i></a>
-                    <a href="https://www.instagram.com/vaibhav_pachpute_/" target="_blank"><i class="bi bi-instagram" style="color: #e95950;" aria-label="Instagram"></i></a>
+                    <a href="https://github.com/VaibhavPachpute21" target="_blank"><i class="bi bi-github "
+                            style="color:  #000000;" aria-label="GitHub"></i></a>
+                    <a href="https://www.linkedin.com/in/vaibhavpachpute/" target="_blank"><i class="bi bi-linkedin"
+                            style="color: #007bb6;" aria-label="Linkedin"></i></a>
+                    <a href="https://twitter.com/vaibhav__404" target="_blank"><i class="bi bi-twitter"
+                            style="color: #007bb6;" aria-label="Twitter"></i></a>
+                    <a href="https://www.instagram.com/vaibhav_pachpute_/" target="_blank"><i class="bi bi-instagram"
+                            style="color: #e95950;" aria-label="Instagram"></i></a>
                 </div>
             </div>
             <div class="col-md-6 oder-1">
                 <p>If you want to get in touch with me just drop a message!</p>
-                <form>
+                <form action="mailto:vpachpute22@gmail.com" method="POST" enctype="multipart/form-data"
+                    name="EmailTestForm">
                     <div class="row">
                         <div class="mb-3 col-md-6">
                             <input type="text" class="form-control" placeholder="Your Name">
