email mechanism added!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,8 +35,8 @@
           <a href="https://www.linkedin.com/in/vaibhavpachpute/" target="_blank"><button class="header-btn my-2 my-sm-0"
               type="submit"><i class="bi bi-linkedin"></i></button></a>&nbsp;
 
-          <a href="https://wa.me/919359979571" target="_blank"><button class="header-btn my-2 my-sm-0" type="submit"><i
-                class="bi bi-whatsapp"></i></button></a>
+          <a href="../assets/VaibahvPachpute.pdf" target="_blank"><button class="header-btn my-2 my-sm-0" type="submit">Donwload CV<i
+                class="bi bi-download"></i></button></a>
         </div>
       </nav>
     </div>
