Thank You Page added!

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -167,7 +167,7 @@
                     <button id="sbtbtn" type="submit" class="btn btn-outline-primary"
                     (click)="sendMail(name.value,email.value,subject.value,message.value)">Submit</button>
                 </form>
-                
+                <span>{{sentMSG}}</span>
             </div>
         </div>
     </div>
