--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 order-sm-first">
-                <img alt="heroImg" src="https://avatars.githubusercontent.com/u/77538181" class="img-thumbnail" />
+                <!-- https://avatars.githubusercontent.com/u/77538181 -->
+                <img alt="heroImg" src="../../assets/hero.jpg" class="img-thumbnail" />
             </div>
             <div class="col-md-8">
                 <h1>Hi I'm <strong style="color: #ff6e40; font-family: 'Libre Bodoni', serif;">Vaibhav
